# RemoteMessage

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RMsgTestServer.cpp
RMsgTestClient/: CMakeLists.txt  RMsgTestClient.cpp
RMsgTestServer/: CMakeLists.txt  RMsgTestServer.cpp
RMsgTestTalk/: CMakeLists.txt  RMsgTestTalk.cpp  UpdateUI.h
RemoteMessage/: CMakeLists.txt  ImpExpMacro.h  Message.cpp  Message.h  PbSample.proto  ReadMe.txt  Server.cpp  Server.h  Session.cpp  Session.h  stdafx.cpp  utility.cpp  utility.h
